update the e2e test to run in parallel thread